Allow update API permission
